Increase collage container height to fix card clipping (460px/520px)

--- a/app/[slug]/PhotoCollage.module.css
+++ b/app/[slug]/PhotoCollage.module.css
@@ -1,6 +1,6 @@
 .collage {
   width: 100%;
-  height: 400px;
+  height: 460px;
   margin-bottom: 32px;
   position: relative;
   overflow: hidden;
@@ -31,7 +31,7 @@
 
 @media (max-width: 580px) {
   .collage {
-    height: 456px;
+    height: 520px;
   }
   .card,
   .grayCard {
